get trails works
